# hs-nhentai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  nhentai.cabal  package.yaml  stack.yaml
app/: Main.hs
app/NHentai/: Main.hs  Options.hs  Utils.hs
src/Data/NHentai/: API.hs  Types.hs
src/Data/NHentai/API/: Comment.hs  Gallery.hs
src/Data/NHentai/Internal/: Utils.hs
src/Data/NHentai/Scraper/: HomePage.hs  Types.hs
test/: Test.hs
