cabal-version: 3.0
name: nhentai
version: 0.1.0.0
build-type: Simple

library
  default-language: Haskell2010
  ghc-options: -Wno-tabs
  hs-source-dirs: src
  exposed-modules:
    Data.NHentai.API
  build-depends:
    base >= 4
    , scalpel-core
    , aeson
    , text
    , modern-uri
    , lens
    , exceptions
    , bytestring
    , refined
    , errors

test-suite nhentai-test
  type: exitcode-stdio-1.0
  ghc-options: -Wno-tabs
  default-language: Haskell2010
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4
    , nhentai
    , scalpel
    , aeson
    , text
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , modern-uri
    , refined
    , tasty
    , tasty-hunit
