cabal-version: 3.0
name: hs-nhentai
version: 0.1.0.0
build-type: Simple

library
  default-language: Haskell2010
  ghc-options: -Wall -Wno-tabs
  hs-source-dirs: src
  exposed-modules:
    Data.NHentai.Internal.Utils
    Data.NHentai.Types
    Data.NHentai.API.Gallery
    Data.NHentai.API.Comment
    Data.NHentai.Scraper.HomePage
    Data.NHentai.Scraper.Types
  build-depends:
    base >= 4
    , mtl
    , scalpel-core
    , aeson
    , text
    , split
    , transformers
    , modern-uri
    , lens
    , exceptions
    , bytestring
    , refined
    , errors
    , tagsoup
    , scientific

executable nhentai-cli
  default-language: Haskell2010
  ghc-options: -Wall -Wno-tabs -Wno-orphans
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base >= 4
    , hs-nhentai
    , monad-logger
    , text
    , refined
    , split
    , lens
    , streaming
    , streaming-concurrency
    , exceptions
    , scalpel
    , monad-control
    , filepath
    , time
    , directory
    , modern-uri
    , errors
    , stm
    , aeson
    , optparse-applicative
    , mtl
    , bytestring
    , http-client
    , http-client-tls
    , http-types

test-suite hs-nhentai-test
  type: exitcode-stdio-1.0
  ghc-options: -Wall -Wno-tabs
  default-language: Haskell2010
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base >= 4
    , hs-nhentai
    , scalpel
    , aeson
    , text
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , modern-uri
    , refined
    , tasty
    , tasty-hunit
